grammar.js
    program: ($) =>
      repeat(
        $._node,
      ),

    _node: ($) =>
      choice(
        $._statement,
        $.template_content,
        $.comment,
      ),

    template_content: (_) =>
      choice(
        /[^{]+|\{[^{%]/,
        '{%%',
        '{{{',
      ),

    _expression: ($) =>
      choice(
        $._literal,
        $.filter,
        $.identifier,
        $.predicate,
        $.access,
        output($._expression),
      ),

    translation_expression: ($) =>
      seq(
        't',
        field('key', choice($.string, $.identifier)),
        optional(
          field('argument',
            repeat($.argument),
          ),
        ),
      ),

    // //////////////
    // Primitives //
    // //////////////

    // identifier: (_) => /([a-zA-Z][0-9a-zA-Z_\?-]*)/,
    identifier: (_) => /\[?([a-zA-Z][0-9a-zA-Z_\?-]*)\]?/,

    _literal: ($) => choice($.string, $.number, $.boolean),

    string: (_) =>
      choice(
        seq('\'', /[^']*/, '\''),
        seq('"', /[^"]*/, '"'),
      ),

    boolean: (_) => choice('true', 'false'),

    custom_unpaired_statement: ($) =>
      seq(
        alias($.identifier, 'custom_keyword'),
        repeat($._expression),
      ),

    assignment_statement: ($) =>
      seq(
        'assign',
        field('variable_name', $.identifier),
        '=',
        field('value', $._expression),
      ),

    include_statement: ($) =>
      seq(
        choice(
          'include',
          'include_relative',
        ),
        choice(
          $.string,
          output($._expression),
          alias(
            // match any sequence of non-whitespace charaters that does not contain "{{" or "{%"
            /(\{[^{%\s][^{\s]*|[^{\s]+)(?:\{[^{%\s][^{\s]*)*/,
            $.string,
          ),
        ),
        repeat(
          $._include_param,
        ),
      ),

    _include_param: ($) =>
      seq(
        $.identifier,
        token.immediate('='),
        $._expression,
      ),

    render_statement: ($) =>
      seq(
        'render',
        field('file', $.string),
        optional(
          choice(
            field('arguments',
              seq(',', $.argument_list),
            ),
            field(
              'iteration',
              seq('for', $._render_param),
            ),
            field('with',
              seq('with', $._render_param),
            ),
          ),
        ),
      ),

    _render_param: ($) =>
      seq(
        $.identifier,
        optional(
          seq(
            'as',
            field('item', $.identifier),
          ),
        ),
      ),

    filter: ($) =>
      seq(
        field('body', $._expression),
        '|',
        field('name', $.identifier),
        optional(seq(':', $.argument_list)),
      ),

    access: ($) =>
      seq(
        field('receiver', choice($.access, $.identifier)),
        choice(
          seq(
            '.',
            field('property', $.identifier),
          ),
          seq(
            '[',
            field('property', choice($.number, $.string)),
            ']',
          ),
        ),
      ),

    argument_list: ($) =>
      sep1(
        choice($._literal, $.identifier, $.access, $.argument),
        ',',
      ),

    argument: ($) =>
      seq(
        field('key', $.identifier),
        ':',
        field('value', choice($._literal, $.identifier, $.access)),
      ),

    translation_statement: ($) =>
      seq(
        't=',
        field('key', $.string),
        repeat($.locale_declaration),
      ),

    locale_declaration: ($) =>
      seq(
        field('key', $.identifier),
        ':',
        field('value', $.string),
      ),

    result_statement: ($) =>
      seq(
        'result',
        field('result_name', choice($._literal, $.identifier)),
        field('result_value', $._expression),
      ),
